--- a/src/main/resources/org/sonar/l10n/java/rules/squid/HybrisControllerDaoUsageCheck_java.json
+++ b/src/main/resources/org/sonar/l10n/java/rules/squid/HybrisControllerDaoUsageCheck_java.json
@@ -1,5 +1,5 @@
 {
-  "title": "Avoid using Models in Controller",
+  "title": "Controllers should not use daos directly",
   "type": "CODE_SMELL",
   "status": "ready",
   "remediation": {
